--- a/style.css
+++ b/style.css
@@ -1,347 +1,604 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-:root{
---color-1:#000000;
---color-1-lt:#000000a9;
---color-2:#ffffffe1;
---color-2-dark:#f1f1f1d1;
---color-3:#FD9797;
---color-4:#D04343;
---color-5:#59482B;
---color-6:#AE976F;
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+:root {
+  --color-1: #000000;
+  --color-1-lt: #000000a9;
+  --color-2: #ffffffe1;
+  --color-2-dark: #f1f1f1d1;
+  --color-3: #fd9797;
+  --color-4: #d04343;
+  --color-5: #59482b;
+  --color-6: #ae976f;
 }
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Josefin Sans", serif;
-    box-sizing: border-box;
-
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Josefin Sans", serif;
+  box-sizing: border-box;
 }
 /* re-usable styles*/
-a{
-    display: inline-block;
-    text-decoration: none;
-    text-transform: capitalize;
-    text-align: center;
+a {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: capitalize;
+  text-align: center;
 }
-img{
-    display: block;
-    max-width: 100%;
-    height: auto;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 h1,
 h2,
-h3{
-    font-weight: 400;
+h3 {
+  font-weight: 400;
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-section{
-    padding: 7.5rem 0;
+section {
+  padding: 7.5rem 0;
 }
-.btn{
-     color: var(--color-1-lt);
-    cursor: pointer;
-    transition: .3s ease-in-out;
-    display: inline-block;
-    width: fit-content;
-    padding: 0.6rem 2rem;
-    background-color: var(--color-1-lt);
-    color: var(--color-2);
-    gap: 1rem;
-    border-radius: 0.2rem;
-    border: none;
-    text-align: center;
+.btn {
+  color: var(--color-1-lt);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  display: inline-block;
+  width: fit-content;
+  padding: 0.6rem 2rem;
+  background-color: var(--color-1-lt);
+  color: var(--color-2);
+  gap: 1rem;
+  border-radius: 0.2rem;
+  border: none;
+  text-align: center;
 }
-.btn-view-all{
-    margin: 2rem auto 0 auto;
+.btn-view-all {
+  margin: 2rem auto 0 auto;
 }
-.filter-btns{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
+.filter-btns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
 }
-.filter-btns button{
-    border: none;
-    color: var(--color-1-lt);
-    font-size: 2.2;
-    background-color: transparent;
-    cursor: pointer;
+.filter-btns button {
+  border: none;
+  color: var(--color-1-lt);
+  font-size: 2.2;
+  background-color: transparent;
+  cursor: pointer;
 }
-.filter-btns button.active{
-    background-color: var(--color-1-lt);
-    color: var(--color-2);
-    cursor: pointer;
-    transition: .3s ease-in-out;
-    display: inline-block;
-    width: fit-content;
-    padding: 0.6rem 2rem;
-    border-radius: 0.2rem;
-    border: none;
-    text-align: center;
+.filter-btns button.active {
+  background-color: var(--color-1-lt);
+  color: var(--color-2);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  display: inline-block;
+  width: fit-content;
+  padding: 0.6rem 2rem;
+  border-radius: 0.2rem;
+  border: none;
+  text-align: center;
 }
-.filter-btns button:focus{
-    outline: none;
-    border: none;
+.filter-btns button:focus {
+  outline: none;
+  border: none;
 }
-.wrapper{
-    max-width: 75rem;
-    margin: 0 auto;
-    width: 90%;
+.wrapper {
+  max-width: 75rem;
+  margin: 0 auto;
+  width: 90%;
 }
-.flex-row{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
+.flex-row {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 2rem;
 }
-.flex-col{
-    flex: 1;
+.flex-col {
+  flex: 1;
 }
-.grid-row{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+.grid-row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
-.section-header{
-    width: fit-content;
-    margin: 0 auto;
-    font-size: 2rem;
-    font-weight: 600;
-    color: var(--color-1-lt);
-    margin-bottom: 4.5rem;
-    text-transform: capitalize;
+.section-header {
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--color-1-lt);
+  margin-bottom: 4.5rem;
+  text-transform: capitalize;
 }
-.card{
-    box-shadow: 0 0 0.3rem var(--color-3);
-    padding: 1.6rem;
-    cursor: pointer;
-    border-radius: 0.4rem;
-    transition: .3s ease-in-out;
+.card {
+  box-shadow: 0 0 0.3rem var(--color-3);
+  padding: 1.6rem;
+  cursor: pointer;
+  border-radius: 0.4rem;
+  transition: 0.3s ease-in-out;
 }
-.card .card-img{
-    width: 10rem;
-    height: auto;
-    border: 1px solid gainsboro;
-    margin-bottom: 1.5rem;
-    display: block;
+.card .card-img {
+  width: 10rem;
+  height: auto;
+  border: 1px solid gainsboro;
+  margin-bottom: 1.5rem;
+  display: block;
 }
-.card .card-header{
-font-weight: 600;
-margin-bottom: 1rem;
-font-size: 1.7rem;
+.card .card-header {
+  font-weight: 600;
+  margin-bottom: 1rem;
+  font-size: 1.7rem;
 }
-.card .card-body{
-    color: var(--color-1-lt);
+.card .card-body {
+  color: var(--color-1-lt);
 }
-.card:hover{
-    background-color: var(--color-4);
-    color: var(--color-2)!important;
+.card:hover {
+  background-color: var(--color-4);
+  color: var(--color-2) !important;
 }
 .card:hover .card-body,
-.card:hover .card-header{
-    color: var(--color-2)!important;
+.card:hover .card-header {
+  color: var(--color-2) !important;
 }
-.product-card{
-    box-shadow: 0 0 0.3rem var(--color-3);
-    padding: 1.6rem;
-    border-radius: 0.4rem;
-    transition: .3s ease-in-out;
-    display: flex;
-    flex-direction: column;
-    gap: 0.6rem; 
+.product-card {
+  box-shadow: 0 0 0.3rem var(--color-3);
+  padding: 1.6rem;
+  border-radius: 0.4rem;
+  transition: 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
 }
-.product-card .product-preview-info{
-    position: relative;
-    cursor: pointer;
+.product-card .product-preview-info {
+  position: relative;
+  cursor: pointer;
 }
-.product-card .product-preview-info .product-priview{
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2;
-    background-color: rgba(0, 0, 0, 0.694);
-    height: 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    overflow: hidden;
-    transition: .3s ease-in-out;
-
-    
+.product-card .product-preview-info .product-priview {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.694);
+  height: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
 }
-.product-card .product-preview-info:hover .product-priview{
-    height: 100%;
+.product-card .product-preview-info:hover .product-priview {
+  height: 100%;
 }
-.product-card .product-preview-info .preview-btn{
-background-color: transparent;
-padding: .5rem 2rem;
-border: 0.01rem solid var(--color-2);
-color: var(--color-2);
-font-size: 1.2rem;
-cursor: pointer;
-text-align: center;
-border-radius: 2rem;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-transition: .3s ease-in-out;
+.product-card .product-preview-info .preview-btn {
+  background-color: transparent;
+  padding: 0.5rem 2rem;
+  border: 0.01rem solid var(--color-2);
+  color: var(--color-2);
+  font-size: 1.2rem;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 2rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease-in-out;
 }
-.product-card .product-preview-info .cart-btn{
-background-color: transparent;
-padding: .5rem 2.5rem;
-border: 0.01rem solid var(--color-2);
-color: var(--color-2);
-font-size: 1.2rem;
-cursor: pointer;
-border-radius: 2rem;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-transition: .3s ease-in-out;
+.product-card .product-preview-info .cart-btn {
+  background-color: transparent;
+  padding: 0.5rem 2.5rem;
+  border: 0.01rem solid var(--color-2);
+  color: var(--color-2);
+  font-size: 1.2rem;
+  cursor: pointer;
+  border-radius: 2rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease-in-out;
 }
 .product-card .product-preview-info .cart-btn:hover,
-.product-card .product-preview-info .preview-btn:hover{
-    background-color: var(--color-2);
-    color: var(--color-1-lt);
+.product-card .product-preview-info .preview-btn:hover {
+  background-color: var(--color-2);
+  color: var(--color-1-lt);
 }
 /* end of reusable styles */
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.5rem 0;
-    
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 0;
+  position: relative;
 }
-header .logo{
- line-height: 1.7;
- color: var(--color-1);
- font-weight: 600;
- font-size: 1.5rem; 
- transition: .3s ease-in-out;
+header .logo {
+  line-height: 1.7;
+  color: var(--color-1);
+  font-weight: 600;
+  font-size: 1.5rem;
+  transition: 0.3s ease-in-out;
 }
-header .logo:hover{
-    transform: scale(1.3);
+header .logo:hover {
+  transform: scale(1.3);
 }
-header nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-}
-header nav .nav-list{
-    display: flex;
-    gap: 2rem;
-}
-header nav .nav-list a{
-    color: var(--color-1-lt);
+header .fa{
+    font-size: 1.6rem;
     cursor: pointer;
-}
-header nav .nav-list a{
-    position: relative;
-}
-header nav .nav-list a::after{
-position: absolute;
-content: '';
-width:0;
-background-color: var(--color-1-lt);
-height: 0.1875rem;
-top: 100%;
-left: 0;
-border-radius: 0.125rem;
-transition: .3s ease-in-out;
-
-}
-header nav .nav-list a:hover::after{
-    width: 100%;
-}
-header nav .btn-login{
-    color: var(--color-1-lt);
-    cursor: pointer;
+    display: none;
     transition: .3s ease-in-out;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.6rem 2rem;
-    background-color: var(--color-1-lt);
-    color: var(--color-2);
-    gap: 1rem;
-    border-radius: 0.2rem;
-    
+}
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+header nav .nav-list {
+  display: flex;
+  gap: 2rem;
+}
+header nav .nav-list a {
+  color: var(--color-1-lt);
+  cursor: pointer;
+}
+header nav .nav-list a {
+  position: relative;
+}
+header nav .nav-list a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  background-color: var(--color-1-lt);
+  height: 0.1875rem;
+  top: 100%;
+  left: 0;
+  border-radius: 0.125rem;
+  transition: 0.3s ease-in-out;
+}
+header nav .nav-list a:hover::after {
+  width: 100%;
+}
+header nav .btn-login {
+  color: var(--color-1-lt);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.6rem 2rem;
+  background-color: var(--color-1-lt);
+  color: var(--color-2);
+  gap: 1rem;
+  border-radius: 0.2rem;
 }
 /* styling hero-section */
-.hero .hero-text{
-max-width: 31.25rem;
+.hero .hero-text {
+  max-width: 31.25rem;
 }
-.hero .hero-text .hero-title{
-    font-size: 3.2rem;
-    line-height: 1.1;
-    font-weight: 600;
-    margin-bottom: 0.7rem;
+.hero .hero-text .hero-title {
+  font-size: 3.2rem;
+  line-height: 1.1;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
 }
-.hero .flex-row .flex-col img{
-    border-radius: 0.35rem;
+.hero .flex-row .flex-col img {
+  border-radius: 0.35rem;
 }
-.hero .hero-text .hero-title span{
-    color: var(--color-4);
+.hero .hero-text .hero-title span {
+  color: var(--color-4);
 }
-.hero .hero-text .hero-desc{
-    font-size: 0.9rem;
-    line-height: 1.1;
-    font-weight: 600;
-    margin-bottom: 0.7rem;
-    color: var(--color-1-lt);
-    margin-bottom: 0.7rem;
-
+.hero .hero-text .hero-desc {
+  font-size: 0.9rem;
+  line-height: 1.1;
+  font-weight: 600;
+  margin-bottom: 0.7rem;
+  color: var(--color-1-lt);
+  margin-bottom: 0.7rem;
 }
-.hero .hero-text .search-form{
-   display: flex;
-   align-items: center;
-   height: 2.45rem;
-   box-shadow: 0 0 1px ;
+.hero .hero-text .search-form {
+  display: flex;
+  align-items: center;
+  height: 2.45rem;
+  box-shadow: 0 0 1px;
 }
-.hero .hero-text .search-form .search-input{
-    flex: 4 0;
-    height: 100%;
-    border:none;
-    padding:0 0.5rem;
-    font-size: 1rem;
+.hero .hero-text .search-form .search-input {
+  flex: 4 0;
+  height: 100%;
+  border: none;
+  padding: 0 0.5rem;
+  font-size: 1rem;
 }
-.hero .hero-text .search-form .search-input::placeholder{
-    opacity: .4;
-    transition: .3s ease-in-out;
+.hero .hero-text .search-form .search-input::placeholder {
+  opacity: 0.4;
+  transition: 0.3s ease-in-out;
 }
-.hero .hero-text .search-form .search-input:focus{
-    border: none;
-    outline: none;
+.hero .hero-text .search-form .search-input:focus {
+  border: none;
+  outline: none;
 }
-.hero .hero-text .search-form .search-input:focus::placeholder{
-    opacity: 0;
+.hero .hero-text .search-form .search-input:focus::placeholder {
+  opacity: 0;
 }
-.hero .hero-text .search-form .search-btn{
-    flex: 1 0;
-    height: 100%;
-    border:none;
-    background-color: var(--color-3);
-    font-weight: 600;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 1rem;
-   cursor: pointer;
-
-
+.hero .hero-text .search-form .search-btn {
+  flex: 1 0;
+  height: 100%;
+  border: none;
+  background-color: var(--color-3);
+  font-weight: 600;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 1rem;
+  cursor: pointer;
 }
 /* styling why choose us */
-.why-choose-us{
-   
+.why-choose-us {
 }
 
 /* styling featured-section */
-.featured-section{
-    background-color: var(--color-2-dark);
+.featured-section {
+  background-color: var(--color-2-dark);
+}
+/* styling testmonial section */
+.testimonials {
+  background-color: var(--color-2-dark);
+}
+.testimonials .testimony {
+  border: 0.1rem solid var(--color-6);
+  padding: 1rem;
+  border-radius: 0.4rem;
+  text-align: center;
+}
+.testimonials .testimony i {
+  font-size: 2rem;
+  color: var(--color-4);
+  margin-bottom: 0.9rem;
+}
+.testimonials .testimony p {
+  font-size: 1rem;
+  color: var(--color-1-lt);
+  margin-bottom: 0.9rem;
+}
+.testimonials .testimony h3 {
+  margin-bottom: 0.9rem;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: var(--color-1-lt);
+}
+.testimonials .testimony h5 {
+  margin-bottom: 0.9rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+  color: var(--color-1);
+}
+/* styling contact section */
+
+.contact-form {
+  background: #f9f9f9;
+  padding: 30px;
+  border-radius: 8px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: 600;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+textarea {
+  height: 120px;
+}
+
+button:hover {
+  background: var(--color-1);
+}
+
+.map-container {
+  height: 100%;
+  background: #f9f9f9;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+/* styling footer */
+.footer{
+    background-color: var(--color-1);
+}
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2.3rem;
+}
+
+.footer-section h4 {
+  color: #fff;
+  margin-bottom: 20px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+.footer-section p {
+  color: var(--color-2-dark);
+  line-height: 1.5;
+
+}
+
+.footer-links {
+  list-style: none;
+}
+
+.footer-links li {
+  margin-bottom: .9rem;
+}
+
+.footer-links a {
+  color: var(--color-2-dark);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+  color: var(--color-4 );
+}
+
+.newsletter-form {
+  margin-top: 20px;
+}
+
+.newsletter-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+}
+
+.subscribe-btn {
+  background-color: var(--color-4);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.subscribe-btn:hover {
+  background-color: var(--color-3);
+}
+
+.social-icons {
+  margin-top: 1rem;
+  display: flex;
+  gap: 15px;
+  margin-bottom: 2.5rem;
+}
+
+.social-icons a {
+  color: var(--color-2);
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: var(--color-4);
+}
+
+.footer-bottom {
+  border-top: 4px solid var(--color-4);
+  margin-top: 40px;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.payment-methods {
+  margin-top: 20px;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.payment-methods img {
+    width: 6rem;
+  height: auto;
+}
+@media  only screen and (max-width:1024px) {
+    .grid-row{
+        grid-template-columns: repeat(2, 1fr);
+    }
+   .hero .hero-text .hero-title{
+    font-size: 2.5rem;
+    
+   }
+}
+@media  only screen and (max-width:830px) {
+    section{
+        padding:4.375rem 0 ;
+    }
+    .flex-row{
+        flex-direction: column;
+        width: 100%;
+    }
+    .flex-row .flex-col,
+     .flex-row .flex-col img{
+        width: 100%;
+    }
+    header .fa{
+    display: block;
+   }
+   header nav{
+    position: absolute;
+    background-color: var(--color-2);
+    top: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    padding: 2rem 0;
+    width: 0;
+    overflow: hidden;
+   }
+   header nav.show{
+   width: 100%;
+   transition: .3s ease-in-out;
+   }
+   header nav ul{
+    flex-direction: column;
+    width: 100%;
+   }
+   header nav ul a{
+   border-left: 4px solid;
+    width: 100%;
+    display: block;
+    text-align: start;
+    padding:0.4rem;
+    font-weight: 600;
+   }
+     .hero .flex-row{
+        flex-direction: column-reverse;
+        gap: 4rem;
+     }
+    .hero .hero-text{
+        max-width: 100%;
+    }
+    
+   .hero .hero-text .hero-title{
+    font-size: 2.5rem;
+    
+   }
+   .payment-methods{
+    display: none;
+    flex-direction: column;
+    img{
+      width: 100%;
+    }
+   }
+   
+}
+
+@media  only screen and (max-width:650px) {
+.grid-row{
+    grid-template-columns: 1fr;
+}
 }
